--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<h1>Hola mundo!</h1>
-<hr>
-<p>Bienvenido a Angular</p>
-<p>el mensaje secreto es: {{ title }}</p>
-<hr>
-<app-counter/>
-<hr>
-<app-hero />
-<hr>
-<app-list />
+<app-main-page />
